# KR_6_Django

./: README.md  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/templates/blog/: blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: start_mailing.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html  client_form.html  client_list.html  index.html  log_list.html  mailing_form.html  mailing_list.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_list.html
