[tool.poetry]
name = "kr-6-django"
version = "0.1.0"
description = ""
authors = ["Saveliy <ya.savchik2000@mail.ru>"]
readme = "README.md"
packages = [{include = "kr_6_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
django-crontab = "^0.7.1"
python-dotenv = "^1.0.0"
ipython = "^8.18.1"
pillow = "^10.1.0"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
